--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>My Manga</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
       margin: 0;
-      background: #000;
+      background: black;
       text-align: center;
     }
     img {
       width: 100%;
       max-width: 900px;
       display: block;
-      margin: auto;
+      margin: 0 auto 10px;
     }
   </style>
 </head>
 <body>
-  <img src="page1.jpg" loading="lazy">
-  <img src="page2.jpg" loading="lazy">
-  <img src="page3.jpg" loading="lazy">
+
+<img src="page1.jpg">
+<img src="page2.jpg">
+<img src="page3.jpg">
+<img src="page4.jpg">
+<img src="page5.jpg">
+<img src="page6.jpg">
+<img src="page7.jpg">
+<img src="page8.jpg">
+<img src="page9.jpg">
+<img src="page10.jpg">
+<img src="page11.jpg">
+<img src="page12.jpg">
+<img src="page13.jpg">
+<img src="page14.jpg">
+<img src="page15.jpg">
+<img src="page16.jpg">
+<img src="page17.jpg">
+<img src="page18.jpg">
+<img src="page19.jpg">
+<img src="page20.jpg">
+<img src="page21.jpg">
+
 </body>
 </html>
+
